# CustomerServiceAgent

./: .gitignore  CLAUDE.md  LICENSE  README.md  ecommerce_agent_cli.py  main.py  mcp_servers.example.json  pyproject.toml  requirements.txt  temp.py  项目技术文档.md
.claude/skills/care-guidance/: SKILL.md
.claude/skills/sizing-advice/: SKILL.md  checklist.md
.github/workflows/: test.yml
data/: documents.json  faiss.index  metadata.json
evals/: retrieval_eval.jsonl
examples/: ingest_documents.py
prompts/: memory_extractor_system.txt  query_rewrite_system.txt  system_prompt.txt
rag_server/: __init__.py  cache_service.py  cli.py  cli_view.py  config.py  eval_runner.py  eval_service.py  llm_retry.py  mcp_service.py  memory_service.py  model_factory.py  query_rewrite.py  rag_service.py  reflection_service.py  skill_service.py  trace_service.py  utils.py
tests/: test_agent_memory_save.py  test_cache_service.py  test_cli_config.py  test_cli_runtime.py  test_config.py  test_eval_service.py  test_eval_trace.py  test_llm_retry.py  test_mcp_service.py  test_memory_service.py  test_model_factory.py  test_query_rewrite.py  test_rag_service.py  test_reflection_service.py  test_skill_service.py  test_trace_service.py  test_utils.py
