[project]
name = "rag-server"
version = "0.1.0"
description = "Reusable local RAG and ecommerce agent components for Chinese knowledge-base workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "dashscope>=1.25.17",
    "faiss-cpu>=1.13.2",
    "jieba>=0.42.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.1.9",
    "mcp>=1.27.0",
    "pypdf>=6.10.2",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "setuptools<81",
]

[project.scripts]
rag-cli = "rag_server.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag_server*"]
