[project]
name = "rag-server"
version = "0.1.0"
description = "Reusable local RAG and ecommerce agent components for Chinese knowledge-base workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.17",
    "faiss-cpu>=1.13.2",
    "jieba>=0.42.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.1.9",
    "mcp>=1.27.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.0",
    "pypdf>=6.10.2",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
]

[project.scripts]
rag-cli = "rag_server.cli:main"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.0.0", "ruff>=0.14.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag_server*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["rag_server"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
source = ["rag_server"]

[tool.coverage.report]
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
